@@ -1,4 +1,12 @@
 ------------------------------------------------------
+Release 0 | Beta 0 | Development 0 | Experimental 3
+
+* Added Log
+* Added Logger
+
+* Created the package org.andor.core.logger
+
+------------------------------------------------------
 Release 0 | Beta 0 | Development 0 | Experimental 2
 
 * Added GameLoopInterface
